--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.29.4",
     "next": "13.4.6",
     "next-google-fonts": "^2.2.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
